Fix padding on bounds for transit routes. Fix css "top" on tablet fullscreen. Fix bugs where iOS5 browsers couldn't handle fullscreen.

--- a/app/modules/transit/css/compliant.css
+++ b/app/modules/transit/css/compliant.css
@@ -64,7 +64,7 @@
 #map_dynamic {
   clear: both;
   height: 220px;
-  margin: 0 12px;
+  margin: 0;
 	border: 1px solid #999;
 	overflow: hidden;
 }
