--- a/app/modules/transit/css/fullscreen-common.css
+++ b/app/modules/transit/css/fullscreen-common.css
@@ -1,37 +1,25 @@
-/* Fullscreen in portrait (tall) orientation */
-
-html, body, #wrapper, #nonfooternav {
-  position: static;
-	margin: 0;
-	padding: 0;
-}
-
-#container {
-	position: absolute;
-	overflow: hidden;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	margin: 0;
-	padding: 0;
-	min-height: 320px;
-}
-#map_dynamic {
+html, body, #nonfooternav, #wrapper, #container {
+  position: relative;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 	margin: 0;
 	padding: 0;
 }
+#container {
+	min-height: 500px; /* to force the browser to hide the nav bar */
+}
 
-body.portrait {
-	width: 100%;
-	height: 100%;
-	min-height: 500px;
+#map_dynamic {
+  width: 100%;
+  height: 100%;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
+	border: none;
 }
+
+/* Fullscreen in portrait (tall) orientation */
 
 body.portrait #mapzoom {
 	position: absolute;
@@ -99,14 +87,6 @@ body.portrait #smallscreen {
 }
 
 /* Fullscreen mode in wide (landscape) orientation */
-
-body.landscape {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
 
 body.landscape #mapzoom {
 	position: absolute;
